--- a/force-app/main/default/lwc/testForGitactions/testForGitactions.html
+++ b/force-app/main/default/lwc/testForGitactions/testForGitactions.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card title="Code from source org" icon-name="custom:custom14">
-        <p class="slds-p-horizontal_small">Hello, test {greeting}!</p>
+        <p class="slds-p-horizontal_small">Hello, test test  {greeting}!</p>
         <lightning-input label="Enter Name" onchange={handleInputChange}></lightning-input>
         <p class="--slds-g-color-palette-teal-70">Successfully completed github manual deployment</p>
     </lightning-card>
